--- a/src/components/navigation/Navigation.module.scss
+++ b/src/components/navigation/Navigation.module.scss
@@ -1,30 +1,30 @@
-.container {
-	width: 100vw;
-	height: 100vh;
-	position: fixed;
-
-	button {
-		width: 60px;
-		height: 60px;
-		z-index: 10;
-	}
+.button {
+	position: absolute;
+	width: 60px;
+	height: 60px;
+	z-index: 10;
 }
 
-.yButtons {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: center;
+.up {
+	top: 0;
+	left: 50%;
+	transform: translateX(-50%);
 }
 
-.xButtons {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+.down {
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+.left {
+	top: 50%;
+	left: 0;
+	transform: translateY(-50%);
+}
+
+.right {
+	top: 50%;
+	right: 0;
+	transform: translateY(-50%);
 }
