--- a/src/components/navigation/Navigation.module.scss
+++ b/src/components/navigation/Navigation.module.scss
@@ -1,30 +1,41 @@
 .button {
-	position: absolute;
-	width: 60px;
-	height: 60px;
-	z-index: 10;
+  position: absolute;
+  z-index: 10;
+
+  border: none;
+  background-color: transparent;
+
+  svg {
+    margin: auto;
+  }
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .up {
-	top: 0;
-	left: 50%;
-	transform: translateX(-50%);
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .down {
-	bottom: 0;
-	left: 50%;
-	transform: translateX(-50%);
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .left {
-	top: 50%;
-	left: 0;
-	transform: translateY(-50%);
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  display: flex;
 }
 
 .right {
-	top: 50%;
-	right: 0;
-	transform: translateY(-50%);
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  display: flex;
 }
