--- a/src/components/navigation/Navigation.module.scss
+++ b/src/components/navigation/Navigation.module.scss
@@ -1,3 +1,19 @@
+@use "@/styles/breakpoints" as breakpoint;
+
+.container {
+  @include breakpoint.for-medium-up {
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+
+    width: 8rem;
+    height: 8rem;
+
+    margin: 0 1rem;
+    z-index: 10;
+  }
+}
+
 .button {
   position: absolute;
   z-index: 10;
@@ -9,8 +25,23 @@
     margin: auto;
   }
 
+  p {
+    @include breakpoint.for-medium-up {
+      display: none;
+    }
+  }
+
   &:hover {
     cursor: pointer;
+  }
+
+  @include breakpoint.for-medium-up {
+    background-color: #1b1b1b;
+    color: white;
+
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%;
   }
 }
 
