--- a/src/components/section/Section.module.scss
+++ b/src/components/section/Section.module.scss
@@ -1,7 +1,9 @@
 .section {
-	position: absolute;
-	transition: transform 1s ease;
+  position: absolute;
+  transition: transform 1s ease;
 
-	width: 100%;
-	height: 100%;
+  width: 100%;
+  height: 100%;
+
+  overflow: auto;
 }
